# terge

./: Cargo.toml  README.md
examples/: counter.rs  diagrams.rs  pong.rs
src/: lib.rs
terge_diagrams/: Cargo.toml
terge_diagrams/src/: app.rs  common.rs  freehand.rs  line.rs  main.rs  rect.rs  text.rs  text_editor.rs
terge_jump/: Cargo.toml
terge_jump/src/: app.rs  common.rs  main.rs  player.rs  terrain.rs
terge_lib/: Cargo.toml
terge_lib/examples/: counter.rs  pong.rs
terge_lib/src/: common.rs  event_group.rs  gfx.rs  lib.rs  line.rs  rect.rs
