[package]
name = "terge"
version = "0.1.0"
edition = "2024"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "pong"
path = "examples/pong.rs"

[[example]]
name = "diagrams"
path = "examples/diagrams.rs"

[dependencies]
term_size = "0.3"
crossterm = "0.29"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
